# proyecto-so

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Core/: metrics.cpp  metrics.h  process.cpp  process.h  scheduler.cpp  scheduler.h
Core/algorithms/: fcfs.cpp  fcfs.h  priority.cpp  priority.h  round_robin.cpp  round_robin.h  sjf.cpp  sjf.h
UI/: results_display.cpp  results_display.h
Utils/: process_generator.cpp  process_generator.h
